--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -212,6 +212,23 @@ main {
     }
   }
 
+  //svg hover
+  .add-svg-container {
+    margin-top: -0.8rem;
+
+    .add-svg {
+      .add-svg-path {
+        fill: $red;
+      }
+    }
+
+    &:hover {
+      .add-svg-path {
+        fill: black;
+      }
+    }
+  }
+
   // product grid and card styling
   .product-section {
     .product-card {
@@ -230,22 +247,6 @@ main {
 
         .price {
           padding: 0.9rem 1rem;
-        }
-
-        .add-svg-container {
-          margin-top: -0.8rem;
-
-          .add-svg {
-            .add-svg-path {
-              fill: $red;
-            }
-          }
-
-          &:hover {
-            .add-svg-path {
-              fill: black;
-            }
-          }
         }
       }
     }
@@ -336,7 +337,7 @@ footer {
     .query-img-container {
       .query-img {
         width: 100%;
-        height: 10rem;
+        height: 9rem;
       }
     }
 
@@ -359,6 +360,7 @@ footer {
         flex: 0 0 30%;
 
         .query-img {
+          height: 12rem;
           max-height: 100%;
         }
       }
