--- a/css/main.css
+++ b/css/main.css
@@ -33,11 +33,15 @@ li {
 }
 
 .bg-query-item {
-  background-color: silver;
+  background-color: ghostwhite;
 }
 
 .bg-query-text-container {
-  background-color: ghostwhite;
+  background-color: inherit;
+}
+
+.bg-query-img-container {
+  background-color: inherit;
 }
 
 .button, .button-w-100 {
@@ -313,6 +317,10 @@ footer .footer-bottom-nav {
       grid-template-columns: 1fr;
 }
 
+.search-main .query-item .query-img-container {
+  padding: 1rem;
+}
+
 .search-main .query-item .query-img-container .query-img {
   width: 100%;
   height: 9rem;
@@ -348,8 +356,8 @@ footer .footer-bottom-nav {
   }
   .search-main .query-item .query-img-container {
     -webkit-box-flex: 0;
-        -ms-flex: 0 0 30%;
-            flex: 0 0 30%;
+        -ms-flex: 0 0 25%;
+            flex: 0 0 25%;
   }
   .search-main .query-item .query-img-container .query-img {
     height: 13rem;
@@ -357,8 +365,8 @@ footer .footer-bottom-nav {
   }
   .search-main .query-item .query-text-container {
     -webkit-box-flex: 0;
-        -ms-flex: 0 0 70%;
-            flex: 0 0 70%;
+        -ms-flex: 0 0 75%;
+            flex: 0 0 75%;
   }
 }
 
