--- a/css/main.css
+++ b/css/main.css
@@ -341,8 +341,8 @@ footer .footer-bottom-nav {
 
 @media (min-width: 768px) {
   .search-main {
-    -ms-grid-columns: 3fr 7fr;
-        grid-template-columns: 3fr 7fr;
+    -ms-grid-columns: 3fr 6fr;
+        grid-template-columns: 3fr 6fr;
     -ms-grid-rows: minmax(min-content, max-content);
         grid-template-rows: minmax(-webkit-min-content, -webkit-max-content);
         grid-template-rows: minmax(min-content, max-content);
@@ -356,12 +356,29 @@ footer .footer-bottom-nav {
   }
   .search-main .query-item .query-img-container {
     -webkit-box-flex: 0;
-        -ms-flex: 0 0 25%;
-            flex: 0 0 25%;
+        -ms-flex: 0 0 40%;
+            flex: 0 0 40%;
   }
   .search-main .query-item .query-img-container .query-img {
     height: 13rem;
     max-height: 100%;
+  }
+  .search-main .query-item .query-text-container {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 60%;
+            flex: 0 0 60%;
+  }
+}
+
+@media (min-width: 992px) {
+  .search-main {
+    -ms-grid-columns: 3fr 7fr;
+        grid-template-columns: 3fr 7fr;
+  }
+  .search-main .query-item .query-img-container {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 25%;
+            flex: 0 0 25%;
   }
   .search-main .query-item .query-text-container {
     -webkit-box-flex: 0;
