--- a/css/main.css
+++ b/css/main.css
@@ -317,11 +317,10 @@ footer .footer-bottom-nav {
       grid-template-columns: 1fr;
 }
 
-.search-main .filter-section {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
+.search-main .filter-heading {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
 }
 
 .search-main .query-item .query-img-container {
