carousel:made images and paragraphs in carousel links with a tags

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,14 @@
   border-color: #a44656;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
 li {
   list-style: none;
 }
