--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -194,6 +194,8 @@ main {
     background-size: 70%;
     background-color: $red;
     border-radius: 0;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
 
     .jumbotron-element {
       margin: 0.25rem 0;
@@ -269,6 +271,12 @@ main {
   .product-section {
     .product-card {
       margin-bottom: 1rem;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      transition: 0.3s;
+
+      &:hover {
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+      }
 
       .product-img-container {
         .product-img {
