carousel:h2 size fixed to 2.5rems and added margin top of 1rem

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -235,7 +235,8 @@ main {
         }
 
         h2 {
-          color: white;
+          font-weight: bold;
+          font-size: 2.5rem;
         }
 
         .carousel-texts {
