--- a/css/main.css
+++ b/css/main.css
@@ -220,7 +220,8 @@ main .carousel-main.carousel .carousel-item .carousel-img {
 }
 
 main .carousel-main.carousel .carousel-item h2 {
-  color: white;
+  font-weight: bold;
+  font-size: 2.5rem;
 }
 
 main .carousel-main.carousel .carousel-item .carousel-texts p {
