--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1,6 +1,6 @@
-$charcoal: #353535;
-$red: #a44656;
-
+$charcoal:#383838;
+$red: #d35266;
+$grey:#888;
 //general theme styles
 
 * {
@@ -40,7 +40,7 @@ p {
 }
 
 .grey {
-  color: grey;
+  color: $grey;
 }
 
 .bg-red {
@@ -199,12 +199,22 @@ main {
   .jumbotron {
     background: url("../assets/logo.svg");
     background-repeat: no-repeat;
-    background-position: 5rem;
+    background-position: 4rem;
+    background-color: #c74256;
     background-size: 70%;
-    background-color: $red;
     border-radius: 0;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
+
+    @media (min-width: 768px) {
+      background-size: 30%;
+      background-position: 15rem;
+    }
+
+    @media (min-width: 992px) {
+      background-size: 20%;
+      background-position: 25rem;
+    }
 
     .jumbotron-element {
       margin: 0.25rem 0;
@@ -227,7 +237,7 @@ main {
 
       // caoursal slides
       .carousel-item {
-        background-image: linear-gradient(to right, #868f96 0%, #596164 100%);
+        background-image: linear-gradient(to right, #eee 0%, #989999 100%);
 
         .carousel-img {
           min-width: 100%;
@@ -249,7 +259,7 @@ main {
 
     .carousel-indicators {
       position: relative;
-      background-color: #ccc;
+      background-image: linear-gradient(to right, silver 0%, grey 100%);
       width: 100%;
       margin: 0;
 
