--- a/css/main.css
+++ b/css/main.css
@@ -244,8 +244,9 @@ main .carousel-main.carousel .carousel-item .carousel-texts p {
 
 main .carousel-main .carousel-indicators {
   position: relative;
-  background-image: -webkit-gradient(linear, left top, right top, from(silver), to(grey));
-  background-image: linear-gradient(to right, silver 0%, grey 100%);
+  border: 0;
+  background-image: -webkit-gradient(linear, left top, right top, from(#eee), to(#989999));
+  background-image: linear-gradient(to right, #eee 0%, #989999 100%);
   width: 100%;
   margin: 0;
 }
