--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -259,7 +259,8 @@ main {
 
     .carousel-indicators {
       position: relative;
-      background-image: linear-gradient(to right, silver 0%, grey 100%);
+      border: 0;
+      background-image: linear-gradient(to right, #eee 0%, #989999 100%);
       width: 100%;
       margin: 0;
 
