color:caarousel color to black for the carousel

--- a/css/main.css
+++ b/css/main.css
@@ -239,7 +239,7 @@ main .carousel-main.carousel .carousel-item h2 {
 }
 
 main .carousel-main.carousel .carousel-item .carousel-texts p {
-  color: white;
+  color: black;
 }
 
 main .carousel-main .carousel-indicators {
