--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -251,7 +251,7 @@ main {
 
         .carousel-texts {
           p {
-            color: white;
+            color: black;
           }
         }
       }
