--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -238,6 +238,10 @@ main {
       @media(min-width:768px) {
         grid-template-columns: repeat(2, 1fr);
       }
+
+      @media(min-width:992px) {
+        grid-template-columns: repeat(4, 1fr);
+      }
     }
   }
 
