--- a/css/main.css
+++ b/css/main.css
@@ -205,12 +205,6 @@ main .jumbotron {
   }
 }
 
-main .jumbotron .jumbotron-element {
-  margin: 0.25rem 0;
-  padding: 0.5rem 0;
-  height: 3rem;
-}
-
 main .jumbotron select {
   width: 100%;
   height: 100%;
@@ -223,13 +217,17 @@ main .jumbotron .input-group {
 }
 
 main .jumbotron .input-group * {
-  padding: 0.5rem;
+  padding: 0.4rem;
 }
 
-@media (min-width: 540px) {
+@media (min-width: 768px) {
   main .jumbotron .input-group {
+    padding: 0.5rem;
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
+  }
+  main .jumbotron .input-group .input-group * {
+    padding: 0.5rem;
   }
 }
 
@@ -237,6 +235,9 @@ main .jumbotron .input-group * {
   main .jumbotron .input-group {
     -ms-grid-columns: (1fr)[4];
         grid-template-columns: repeat(4, 1fr);
+  }
+  main .jumbotron .input-group .input-group * {
+    padding: 0.75rem;
   }
 }
 
