--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -79,7 +79,6 @@ p {
   padding: 0.5rem 3rem;
 }
 
-
 .button-w-100 {
   @extend .button;
 
@@ -218,11 +217,6 @@ main {
       background-position: 25rem;
     }
 
-    .jumbotron-element {
-      margin: 0.25rem 0;
-      padding: 0.5rem 0;
-      height: 3rem;
-    }
 
     select {
       width: 100%;
@@ -234,19 +228,27 @@ main {
     //input group changes
     .input-group {
       * {
-        padding: 0.5rem;
+        padding: 0.4rem;
       }
-
-      .drop-down {}
 
       grid-gap: 0.5rem;
 
-      @media(min-width:540px) {
+      @media (min-width: 768px) {
+        padding: 0.5rem;
+
+        .input-group * {
+          padding: 0.5rem;
+        }
+
         grid-template-columns: repeat(2, 1fr);
       }
 
-      @media(min-width:992px) {
+      @media (min-width: 992px) {
         grid-template-columns: repeat(4, 1fr);
+
+        .input-group * {
+          padding: 0.75rem;
+        }
       }
     }
   }
