--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -217,7 +217,6 @@ main {
       background-position: 25rem;
     }
 
-
     select {
       width: 100%;
       height: 100%;
@@ -245,6 +244,7 @@ main {
 
       @media (min-width: 992px) {
         grid-template-columns: repeat(4, 1fr);
+        grid-gap: 0.75rem;
 
         .input-group * {
           padding: 0.75rem;
