--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,10 @@ p {
   grid-column: 6/10;
 }
 
+header .navbar {
+  font-size: 0.9rem;
+}
+
 header .navbar .navbar-toggler {
   border: 0.5px solid rgba(173, 119, 57, 0.356);
 }
