--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -172,6 +172,8 @@ p {
 // header styles
 header {
   .navbar {
+    font-size: 0.9rem;
+
     .navbar-toggler {
       border: 0.5px solid rgba(173, 119, 57, 0.356);
     }
