fix:updated company logo with zattix logo

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -172,6 +172,10 @@ p {
 // header styles
 header {
   .navbar {
+    .nav-logo {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
 
     .navbar-toggler {
       border: 0.5px solid rgba(173, 119, 57, 0.356);
