--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,11 @@ p {
   grid-column: 6/10;
 }
 
+header .navbar .nav-logo {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
 header .navbar .navbar-toggler {
   border: 0.5px solid rgba(173, 119, 57, 0.356);
 }
