--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -216,6 +216,12 @@ main {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 
+    & select.drop-down {
+      @media (max-width: 540px) {
+        height: 2.5rem;
+      }
+    }
+
     @media (min-width: 768px) {
       background-size: 30%;
       background-position: 15rem;
@@ -224,13 +230,6 @@ main {
     @media (min-width: 992px) {
       background-size: 20%;
       background-position: 25rem;
-    }
-
-    select {
-      width: 100%;
-      height: 100%;
-      background-color: white;
-      border: 1px solid silver;
     }
 
     //input group changes
